# cloudwarden

./: .env.example  .gitignore  .gitleaks.toml  .trivyignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml  pyproject.toml  skills-lock.json
.github/workflows/: ci.yml
backend/: Dockerfile  azure_mgmt_keep.txt  requirements-dev.txt  requirements-overrides-security.txt  requirements.txt  setup.cfg
backend/azure_finops/: auth.py  cli.py  config.py  models.py  orchestrator.py  reporting.py  scheduler.py
backend/azure_finops/ai/: anthropic_provider.py  factory.py  openai_compatible_provider.py  prompt.py
backend/azure_finops/api/: main.py
backend/cloudwarden/: __init__.py  cli.py  config.py  metricnames.py  models.py  observability.py  orchestrator.py  resilience.py  scheduler.py
backend/tests/: conftest.py  test_account_groups.py  test_activitylog.py  test_ai.py  test_ai_providers.py  test_analysis.py  test_anomaly.py  test_asset_query.py  test_asset_relationships.py  test_assetdb_ingestion.py  test_audit_log.py  test_auth.py  test_aws_cost.py  test_aws_provider.py  test_azure_footprint.py  test_azure_live.py  test_binding_execution.py  test_bindings_model.py  test_budgets.py  test_bulk_insert_chunking.py  test_ci_trivy_config.py  test_cis_pack.py  test_collectors.py  test_commitments.py  test_compliance_explorer.py  test_cost_pack.py  test_cost_parity.py  test_costs_monthly_and_subname.py  test_costs_scoping.py  test_costs_trend.py  test_cross_cloud.py  test_custodian_actions.py  test_custodian_engine.py  test_db_integration.py  test_dependency_security.py  test_drift.py  test_enrich.py  test_event_assetdb.py  test_eventmode.py  test_events_config.py  (+44 more)
docs/: 06-multi-cloud-onboarding.md  07-governance-as-code.md  08-finops-cost-recommendations.md  09-remediation.md
docs/examples/: shift-left.github-workflow.yml
frontend/: Dockerfile  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
frontend/app/: globals.css  layout.tsx  page.tsx
grafana/dashboards/: execution-health.json  finops-cost.json  finops-recommendations.json  governance-posture.json
(+212 files in other folders)
