[project]
name = "cloudwarden"
version = "0.1.0"
description = "CloudWarden — multi-cloud governance-as-code (Cloud Custodian) and FinOps across Azure/AWS/GCP: policy management & scheduled execution, cost analysis, right-sizing/shutdown recommendations, and guarded remediation, with pluggable AI and Grafana dashboards."
requires-python = ">=3.13"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["cloudwarden*"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
addopts = "-q"

[tool.coverage.run]
source = ["cloudwarden"]
omit = ["backend/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 95
exclude_also = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pragma: no cover",
]
